--- a/index.html
+++ b/index.html
@@ -36,78 +36,94 @@
         <ul class="main">
           <!-- Liberty Bridge Card -->
           <li class="card card1">
-            <header></header>
+            <img src="./images/bridge.jpg">
             <section class="card-body">
               <a class="category" href="#">Travel</a>
-              <h1>Liberty Bridge Downtown Greenville</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button class="continue-reading" type="button" name="continue-reading"></button>
+              <h1 class="card-title">Liberty Bridge Downtown Greenville</h1>
+              <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button class="continue-reading" type="button" name="continue-reading">Continue Reading</button>
             </section>
             <section class="card-footer">
-              <p class="author">By Ben Hungerford On August 09, 2020</p>
-              <a href="#" class="social-link card-footer-share"><img src="./images/facebook.png" alt="Facebook"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/twitter.png" alt="Twitter"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/google-plus-logo.png" alt="Google+"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/linkedin.png" alt="LinkedIn"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/pinterest.png" alt="Pinterest"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/envelope.png" alt="Email"></a>
+              <section class="card-footer-author">
+                <p class="author">By <a class="author-name">Ben Hungerford</a> On August 09, 2020</p>
+              </section>
+              <section class="card-footer-social">
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-facebook-f"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-google-plus-g"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-pinterest"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share far fa-envelope"></i></a>
+              </section>
             </section>
           </li>
           <!-- Crystals! -->
           <li class="card card2">
-            <header></header>
+            <img src="./images/crystals.jpg">
             <section class="card-body">
               <a class="category" href="#">Art</a>
-              <h1>Art In Public Places</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button class="continue-reading" type="button" name="continue-reading"></button>
+              <h1 class="card-title">Art In Public Places</h1>
+              <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <button class="continue-reading" type="button" name="continue-reading">Continue Reading</button>
             </section>
             <section class="card-footer">
-              <p class="author">By Noelle Hamberis On August 09, 2020</p>
-              <a href="#" class="social-link card-footer-share"><img src="./images/facebook.png" alt="Facebook"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/twitter.png" alt="Twitter"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/google-plus-logo.png" alt="Google+"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/linkedin.png" alt="LinkedIn"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/pinterest.png" alt="Pinterest"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/envelope.png" alt="Email"></a>
+              <section class="card-footer-author">
+                <p class="author">By <a class="author-name">Noelle Hamberis</a> On August 09, 2020</p>
+              </section>
+              <section class="card-footer-social">
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-facebook-f"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-google-plus-g"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-pinterest"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share far fa-envelope"></i></a>
+              </section>
             </section>
           </li>
           <!-- Mice On Main -->
           <li class="card card3">
-            <header></header>
+            <img src="./images/mouse.jpg">
             <section class="card-body">
               <a class="category" href="#">Entertainment</a>
-              <h1>Mice On Main</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button class="continue-reading" type="button" name="continue-reading"></button>
+              <h1 class="card-title">Mice On Main</h1>
+              <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button class="continue-reading" type="button" name="continue-reading">Continue Reading</button>
             </section>
             <section class="card-footer">
-              <p class="author">By James Lindsey On August 09, 2020</p>
-              <a href="#" class="social-link card-footer-share"><img src="./images/facebook.png" alt="Facebook"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/twitter.png" alt="Twitter"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/google-plus-logo.png" alt="Google+"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/linkedin.png" alt="LinkedIn"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/pinterest.png" alt="Pinterest"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/envelope.png" alt="Email"></a>
+              <section class="card-footer-author">
+                <p class="author">By <a class="author-name">James Lindsey</a> On August 09, 2020</p>
+              </section>
+              <section class="card-footer-social">
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-facebook-f"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-google-plus-g"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-pinterest"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share far fa-envelope"></i></a>
+              </section>
             </section>
           </li>
           <!-- Coffee Underground -->
           <li class="card card4">
-            <header></header>
+            <img src="./images/coffee.jpg">
             <section class="card-body">
               <a class="category" href="#">Food</a>
-              <h1>Day Started With Coffee</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <button class="continue-reading" type="button" name="continue-reading"></button>
+              <h1 class="card-title">Day Started With Coffee</h1>
+              <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <button class="continue-reading" type="button" name="continue-reading">Continue Reading</button>
             </section>
             <section class="card-footer">
-              <p class="author">By Josh Lanier On August 09, 2020</p>
-              <a href="#" class="social-link card-footer-share"><img src="./images/facebook.png" alt="Facebook"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/twitter.png" alt="Twitter"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/google-plus-logo.png" alt="Google+"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/linkedin.png" alt="LinkedIn"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/pinterest.png" alt="Pinterest"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/envelope.png" alt="Email"></a>
+              <section class="card-footer-author">
+                <p class="author">By <a class="author-name">Josh Lanier</a> On August 09, 2020</p>
+              </section>
+              <section class="card-footer-social">
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-facebook-f"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-google-plus-g"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share fab fa-pinterest"></i></a>
+                <a href="#" class="social-link"><i class="card-footer-share far fa-envelope"></i></a>
+              </section>
             </section>
           </li>
         </ul>
