secondary card one finished

--- a/index.html
+++ b/index.html
@@ -130,24 +130,23 @@
         <!-- SECONDARY CONTENT -->
         <ul class="secondary">
           <!-- Brian Cambron -->
-          <li class="secondary-card1">
-            <header></header>
+          <li class="secondary-card secondary-card1">
+            <img src="./images/river.jpeg" alt="River">
             <section class="secondary-card-body">
-              <img src="" alt="Brian">
-              <h2>Brian Cambron</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <img class="brian" src="./images/brian.jpeg" alt="Brian">
+              <h2 class="secondary-card1-text brian-title">Brian Cambron</h2>
+              <p class="secondary-card1-text brian-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+              <a href="#" class="social-link"><i class="secondary-card-footer-share fab fa-facebook-f"></i></a>
+              <a href="#" class="social-link"><i class="secondary-card-footer-share fab fa-twitter"></i></a>
+              <a href="#" class="social-link"><i class="secondary-card-footer-share fab fa-google-plus-g"></i></a>
+              <a href="#" class="social-link"><i class="secondary-card-footer-share fab fa-linkedin-in"></i></a>
+              <a href="#" class="social-link"><i class="secondary-card-footer-share fab fa-instagram"></i></a>
             </section>
             <section class="secondary-card-footer">
-              <a href="#" class="social-link card-footer-share"><img src="./images/facebook.png" alt="Facebook"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/twitter.png" alt="Twitter"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/google-plus-logo.png" alt="Google+"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/linkedin.png" alt="LinkedIn"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/pinterest.png" alt="Pinterest"></a>
-              <a href="#" class="social-link card-footer-share"><img src="./images/envelope.png" alt="Email"></a>
             </section>
           </li>
           <!-- Popular Posts -->
-          <li class="secondary-card2">
+          <li class="secondary-card secondary-card2">
             <h2>Popular Posts</h2>
             <section>
               <img src="" alt="Greenville Drive">
@@ -166,7 +165,7 @@
             </section>
           </li>
           <!-- Latest Posts -->
-          <li class="secondary-card3">
+          <li class="secondary-card secondary-card3">
             <h2>Latest Posts</h2>
             <section>
               <img src="" alt="Opera">
@@ -190,7 +189,7 @@
             </section>
           </li>
           <!-- Pinterest -->
-          <li class="secondary-card4">
+          <li class="secondary-card secondary-card4">
             <h1>Pinterest</h1>
             <section>
               <img src="" alt="">
