normal layout complete

--- a/index.html
+++ b/index.html
@@ -147,60 +147,77 @@
           </li>
           <!-- Popular Posts -->
           <li class="secondary-card secondary-card2">
-            <h2>Popular Posts</h2>
-            <section>
-              <img src="" alt="Greenville Drive">
-              <h3>Greenville Drive</h3>
-              <p>August 09, 2020</p>
+            <h2 class="popular">Popular Posts</h2>
+            <section class="popular-content popular-content-baseball">
+              <img class="baseball" src="./images/baseball.jpg" alt="Greenville Drive">
+              <h3 class="popular-title baseball-title">Greenville Drive</h3>
+              <p class="popular-date">August 09, 2020</p>
             </section>
-            <section>
-              <img src="" alt="Fall For Greenville">
-              <h3>Fall For Greenville</h3>
-              <p>August 09, 2020</p>
+            <section class="popular-content popular-content-fall">
+              <img class="fall-for-gvl" src="./images/fall-for-gvl.webp" alt="Fall For Greenville">
+              <h3 class="popular-title fall-title">Fall For Greenville</h3>
+              <p class="popular-date fall-date">August 09, 2020</p>
             </section>
-            <section>
-              <img src="" alt="Rooftop">
-              <h3>Cocktails on the Roof</h3>
-              <p>August 09, 2020</p>
+            <section class="popular-content popular-content-sip">
+              <img src="./images/sip.jpg" alt="Rooftop">
+              <h3 class="popular-title sip-title">Cocktails on the Rooftop</h3>
+              <p class="popular-date sip-date">August 09, 2020</p>
             </section>
           </li>
           <!-- Latest Posts -->
           <li class="secondary-card secondary-card3">
-            <h2>Latest Posts</h2>
-            <section>
-              <img src="" alt="Opera">
-              <h3>Florence Opera Theater By Salvatore</h3>
-              <p>August 09, 2020</p>
+            <h2 class="latest">Latest Posts</h2>
+            <section class="latest-section">
+              <section class="latest-image">
+                <img src="./images/opera.jpg" alt="Opera">
+              </section>
+              <section class="latest-content">
+                <h3 class="latest-content-title">Florence Opera Theater By Salvatore</h3>
+                <p class="latest-content-date">August 09, 2020</p>
+              </section>
             </section>
-            <section>
-              <img src="" alt="Minimalist">
-              <h3>Modern Minimalist Room</h3>
-              <p>August 09, 2020</p>
+            <section class="latest-section latest-section1">
+              <section class="latest-image">
+                <img src="./images/room.jpg" alt="Room">
+              </section>
+              <section class="latest-content">
+                <h3 class="latest-content-title">Modern Minimalist Room</h3>
+                <p class="latest-content-date">August 09, 2020</p>
+              </section>
             </section>
-            <section>
-              <img src="" alt="Warberg">
-              <h3>Rasmus Warberg Inspired by Reduction</h3>
-              <p>August 09, 2020</p>
+            <section class="latest-section latest-section2">
+              <section class="latest-image">
+                <img src="./images/peach.jpg" alt="Peach">
+              </section>
+              <section class="latest-content latest-section3">
+                <h3 class="latest-content-title">Rasmus Warberg Inspired By Reduction</h3>
+                <p class="latest-content-date">August 09, 2020</p>
+              </section>
             </section>
-            <section>
-              <img src="" alt="Coffee">
-              <h3>Day Started With Coffee</h3>
-              <p>August 09, 2020</p>
+            <section class="latest-section latest-section4">
+              <section class="latest-image">
+                <img src="./images/coffee-pot.jpg" alt="Coffee">
+              </section>
+              <section class="latest-content">
+                <h3 class="latest-content-title">Day Started With Coffee</h3>
+                <p class="latest-content-date">August 09, 2020</p>
+              </section>
             </section>
+
           </li>
           <!-- Pinterest -->
           <li class="secondary-card secondary-card4">
-            <h1>Pinterest</h1>
-            <section>
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
-              <img src="" alt="">
+            <h1 class="pinterest">Pinterest</h1>
+            <section class="pinterest-photos">
+              <img src="./images/danny.jpg" alt="Danny">
+              <img src="./images/rusty.jpg" alt="Rusty">
+              <img src="./images/linus.jpg" alt="Linus">
+              <img src="./images/tess.jpg" alt="Tess">
+              <img src="./images/terry.jpg" alt="Terry">
+              <img src="./images/frank.jpg" alt="Frank">
+              <img src="./images/saul.jpg" alt="Saul">
+              <img src="./images/boomer.jpg" alt="Boomer">
+              <img src="./images/livingston.jpg" alt="Livingston">
             </section>
           </li>
         </ul>
