--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <section class="nav-links">
           <a class="nav-link home" href="#">Home
             <i class="fas fa-angle-down"></i></a>
-          <a class="nav-link features" href="#">Features
+          <a class="nav-link features nav-mobile" href="#">Features
             <i class="fas fa-angle-down"></i></a>
-          <a class="nav-link lifestyle" href="#">Lifestyle</a>
-          <a class="nav-link travel" href="#">Travel</a>
+          <a class="nav-link lifestyle nav-mobile" href="#">Lifestyle</a>
+          <a class="nav-link travel nav-mobile" href="#">Travel</a>
           <a class="nav-link about-me" href="#">About Me</a>
           <a class="nav-link contact" href="#">Contact</a>
         </section>
