--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
           <li class="secondary-card secondary-card2">
             <h2 class="popular">Popular Posts</h2>
             <section class="popular-content popular-content-baseball">
-              <img class="baseball" src="./images/baseball.jpg" alt="Greenville Drive">
+              <img class="baseball hover" src="./images/baseball.jpg" alt="Greenville Drive">
               <h3 class="popular-title baseball-title">Greenville Drive</h3>
               <p class="popular-date">August 09, 2020</p>
             </section>
             <section class="popular-content popular-content-fall">
-              <img class="fall-for-gvl" src="./images/fall-for-gvl.webp" alt="Fall For Greenville">
+              <img class="fall-for-gvl hover" src="./images/fall-for-gvl.webp" alt="Fall For Greenville">
               <h3 class="popular-title fall-title">Fall For Greenville</h3>
               <p class="popular-date fall-date">August 09, 2020</p>
             </section>
             <section class="popular-content popular-content-sip">
-              <img src="./images/sip.jpg" alt="Rooftop">
+              <img class="hover"src="./images/sip.jpg" alt="Rooftop">
               <h3 class="popular-title sip-title">Cocktails on the Rooftop</h3>
               <p class="popular-date sip-date">August 09, 2020</p>
             </section>
@@ -169,7 +169,7 @@
             <h2 class="latest">Latest Posts</h2>
             <section class="latest-section">
               <section class="latest-image">
-                <img src="./images/opera.jpg" alt="Opera">
+                <img class="hover" src="./images/opera.jpg" alt="Opera">
               </section>
               <section class="latest-content">
                 <h3 class="latest-content-title">Florence Opera Theater By Salvatore</h3>
@@ -178,7 +178,7 @@
             </section>
             <section class="latest-section latest-section1">
               <section class="latest-image">
-                <img src="./images/room.jpg" alt="Room">
+                <img class="hover" src="./images/room.jpg" alt="Room">
               </section>
               <section class="latest-content">
                 <h3 class="latest-content-title">Modern Minimalist Room</h3>
@@ -187,7 +187,7 @@
             </section>
             <section class="latest-section latest-section2">
               <section class="latest-image">
-                <img src="./images/peach.jpg" alt="Peach">
+                <img class="hover" src="./images/peach.jpg" alt="Peach">
               </section>
               <section class="latest-content latest-section3">
                 <h3 class="latest-content-title">Rasmus Warberg Inspired By Reduction</h3>
@@ -196,7 +196,7 @@
             </section>
             <section class="latest-section latest-section4">
               <section class="latest-image">
-                <img src="./images/coffee-pot.jpg" alt="Coffee">
+                <img class="hover" src="./images/coffee-pot.jpg" alt="Coffee">
               </section>
               <section class="latest-content">
                 <h3 class="latest-content-title">Day Started With Coffee</h3>
@@ -209,15 +209,15 @@
           <li class="secondary-card secondary-card4">
             <h1 class="pinterest">Pinterest</h1>
             <section class="pinterest-photos">
-              <img src="./images/danny.jpg" alt="Danny">
-              <img src="./images/rusty.jpg" alt="Rusty">
-              <img src="./images/linus.jpg" alt="Linus">
-              <img src="./images/tess.jpg" alt="Tess">
-              <img src="./images/terry.jpg" alt="Terry">
-              <img src="./images/frank.jpg" alt="Frank">
-              <img src="./images/saul.jpg" alt="Saul">
-              <img src="./images/boomer.jpg" alt="Boomer">
-              <img src="./images/livingston.jpg" alt="Livingston">
+              <img class="hover" src="./images/danny.jpg" alt="Danny">
+              <img class="hover" src="./images/rusty.jpg" alt="Rusty">
+              <img class="hover" src="./images/linus.jpg" alt="Linus">
+              <img class="hover" src="./images/tess.jpg" alt="Tess">
+              <img class="hover" src="./images/terry.jpg" alt="Terry">
+              <img class="hover" src="./images/frank.jpg" alt="Frank">
+              <img class="hover" src="./images/saul.jpg" alt="Saul">
+              <img class="hover" src="./images/boomer.jpg" alt="Boomer">
+              <img class="hover" src="./images/livingston.jpg" alt="Livingston">
             </section>
           </li>
         </ul>
