moves mockup out of images folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="page">
-      <!-- Nav Bar -->
+      <!-- NAV BAR -->
       <nav class="nav">
         <section class="nav-links">
           <a class="nav-link home" href="#">Home
@@ -31,6 +31,7 @@
           <a class="social-link nav-social-link search" href="#"><i class="fas fa-search"></i></a>
         </section>
       </nav>
+      <!-- CONTENT -->
       <section class="content">
         <!-- MAIN CONTENT -->
         <ul class="main">
@@ -222,7 +223,6 @@
           </li>
         </ul>
       </section>
-
       <!-- PAGE FOOTER -->
       <footer class="footer">
         <h4>@2020 Carolina Code School Students Build Great Things</h4>
